fix: Template library hover checkbox effect, allignments and spacing, select/clear all selected template logic

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -2,8 +2,8 @@
     padding: 0px;
     overflow: auto;
     border-right: '1px solid #DCDCDC';
-    height: 100vh;
+    height: 90vh;
     ul.MuiSimpleTreeView-root {
-        padding: 4px;
+        padding: var(space-lg) var(space-xl);
     }
 }
